# GdlSharp

./: .gitignore  Makefile.am  README.md  configure.ac  gdl-sharp-3.pc.in
sources/: AssemblyInfo.cs  AssemblyInfo.cs.in  Makefile.am  gdl-sharp-api.raw  gdl-sharp-api.xml  gdl-sharp.metadata  gdl-sharp.snk  sources.xml
